@@ -4,6 +4,7 @@ next
   * AArch64 52-bit VA
   * Address translation tuning with addrxlat.default.* and addrxlat.force.*
     attributes.
+    The old mechanism using addrxlat.opts is no longer available.
 
 0.4.1
 -----
